bugfix: Fixed scrollbar and implemented seo

--- a/tiffany-portfolio/styles/globals.css
+++ b/tiffany-portfolio/styles/globals.css
@@ -48,6 +48,7 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -89,6 +90,7 @@
   margin: 0;
 }
 
+
 html,
 body {
   max-width: 100vw;
@@ -103,12 +105,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  scroll-behavior: smooth;
-}
-
-.scroll-container.ready {
-  transition: opacity 0.3s ease;
-  opacity: 1;
 }
 
 .font-title {
@@ -148,6 +144,20 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+nav {
+  transition: height .3s ease,transform 1s ease,opacity .8s ease;
+}
+
+nav .revealed {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+nav .unrevealed {
+  transform: translateY(100%);
+  opacity: 0;
 }
 
 @media (prefers-color-scheme: dark) {
